Fixed footer alignment

--- a/todo-list/style.css
+++ b/todo-list/style.css
@@ -153,11 +153,6 @@ body {
         letter-spacing: 1px;
     }
 
-    .footer {
-        margin-top: 40px;
-        font-size: 0.8rem;
-    }
-
     .template {
         font-size: 0.6rem;
     }
